Repasando redacción y corrigiendo | Lógica

--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 1/1. Teorias Formales.md
@@ -1,28 +1,26 @@
-Un ***argumento*** puede definirse como una *secuencia de sentencias*, una de las cuales es la conclusión a favor de la que se argumenta, y las otras son las premisas, o razones para aceptar la conclusión. Las sentencias que componen la secuencia argumentativa tienen la característica de expresar algo, es decir son **declarativas**, y tiene la propiedad de ser verdadera o falsa.
+Un ***argumento*** puede definirse como una *secuencia de sentencias*, una de las cuales es la conclusión a favor de la que se argumenta, y las otras son las premisas, o razones para aceptar la conclusión. Las sentencias que componen toda secuencia argumentativa tienen la característica de expresar algo, es decir son **declarativas**, y tiene la propiedad de ser verdadera o falsa.
 >[!tldr] Proposiciones
->La afirmación “Yo soy un hombre” puede ser verdadera o falsa dependiendo de quién la diga. A continuación, supondremos que el contexto permanece invariable durante toda la exposición del argumento.
->Esta convención establece el significado de los argumentos al fijar el significado de cada una de las sentencias que forman parte de la secuencia de sentencias que componen el argumento. Esta elección es una abstracción necesaria para poder tratar de manera sistemática la construcción y el análisis de los argumentos. Por ejemplo, en el siguiente argumento:
+>La afirmación “*Yo soy un hombre*” puede ser verdadera o falsa dependiendo de quién la diga. A continuación, supondremos que el contexto permanece invariable durante toda la exposición del argumento.
+>Esta convención establece el significado de los argumentos al fijar el significado de cada una de las sentencias que forman parte de la secuencia argumentativa que componen el argumento. Esta elección es una abstracción necesaria para poder tratar de manera sistemática la construcción y el análisis de los argumentos. Por ejemplo, en el siguiente argumento:
 >- Todos los hombres son mortales.
 >- Yo soy un hombre.
 >- Luego, soy mortal.
 > 
->La veracidad de la sentencia “Yo soy un hombre” depende del agente que la pronuncie, el cual se considera constante, así como el contexto general en el que se enuncian estas sentencias. Estas sentencias con un significado fijo se denominan ***proposiciones***.
+>La veracidad de dicha sentencia depende del agente que la pronuncie, el cual se considera constante, así como el contexto general en el que se enuncian estas sentencias. Estas sentencias con un significado fijo se denominan ***proposiciones***.
 
-Un argumento se considera bueno siempre y cuando sus premisas sean verdaderas y el razonamiento es ***válido***. La idea de validez de un argumento desde el punto de vista clásico es simple, un argumento es válido si no es posible que las premisas sean verdaderas y la conclusión no lo sea. Es decir, no se puede imaginar en una situación en la que las premisas sean verdaderas y la conclusión no, por ende el argumento sobre la mortalidad de Sócrates es válido porque si aceptamos que los hombres son mortales y que Sócrates es un hombre no es posible pensar en una situación en la que estas premisas sean verdaderas y en la que Sócrates no sea mortal. En tal caso estaríamos ante un argumento **inválido**.
+Un argumento se considera bueno siempre y cuando sus premisas sean verdaderas y el razonamiento es ***válido***. La idea de validez de un argumento desde el punto de vista clásico es simple, un argumento es válido si no es posible que las premisas sean verdaderas y la conclusión sea falsa. Es decir, no se puede imaginar en una situación en la que las premisas sean verdaderas y la conclusión no. En tal caso estaríamos ante un argumento **inválido**.
 Un argumento puede ser válido, pero aún puede ser un mal argumento, para ello basta con que se apoye en una o más premisas falsas. Tales argumentos se consideran válidos pero no ***sensatos***. Un argumento es sensato si es válido y además todas sus premisas son verdaderas, de este modo nos quedaría la siguiente disyuntiva:
-
 ![[argumento-insensato.png]]
 
 >[!info] Aclaración sobre la Validez
 >Que un argumento sea sensato implica que también es válido. La sensatez de un argumento puede ser invalidada fácilmente, ya que basta una sola premisa falsa para demostrar la insensatez del argumento.
 
-Los argumentos descriptos se denominan ***argumentos deductivos***. Los argumentos válidos de este tipo siguen formas reconocidas como sensatas, estas formas garantizan que si se introducen premisas ciertas la conclusión deberá serlo. Veamos el siguiente ejemplo:
-
+Los argumentos descritos anteriormente se denominan ***argumentos deductivos***. Los argumentos válidos de este tipo siguen formas reconocidas como sensatas, estas formas garantizan que si se introducen premisas ciertas la conclusión deberá serlo. Veamos el siguiente ejemplo:
 1. Todos los Gonks son Tronks.
 2. Sócrates es un Gonk.
 3. Luego, Sócrates es un Tronk.
 
-Se observa que tiene la misma forma que el argumento sobre la mortalidad de Sócrates. Si en esta forma se reemplazan consistentemente las palabras, se obtiene un argumento válido. Es decir, cualquier situación que haga falsa la conclusión también hará falsa al menos una premisa. Por ejemplo:
+Se observa que tiene la misma forma que el argumento sobre la mortalidad. Si en esta forma se reemplazan consistentemente las palabras, se obtiene un argumento válido. Es decir, cualquier situación que haga falsa la conclusión también hará falsa al menos una premisa. Por ejemplo:
 1. Todos los B son C.
 2. A es un B.
 3. Luego, A es un C.
@@ -34,7 +32,7 @@ Un conjunto de sentencias se dice ***consistente*** solo si es posible que todas
 3. No es posible tener gran moral y robar.
 
 Estas tres sentencias no pueden ser simultáneamente verdaderas, a lo sumo solo dos de ellas pueden serlo simultáneamente.
-Sorprendentemente, las nociones de consistencia y validez están relacionadas, a pesar de ser conceptos diferentes, ya que decir que un argumento es válido equivale a decir que algo es imposible porque no puede suceder que las premisas sean verdaderas y la conclusión falsa. De la misma manera si un conjunto de sentencias es inconsistente es equivalente a decir que algo es imposible debido a que todas las sentencias no pueden ser simultáneamente verdaderas.
+Sorprendentemente, las nociones de consistencia y validez están relacionadas, a pesar de ser conceptos diferentes, ya que decir que un argumento es válido equivale a decir que algo es imposible que las premisas sean verdaderas y la conclusión falsa. De la misma manera si un conjunto de sentencias es inconsistente es equivalente a decir que es imposible que todas las sentencias no pueden ser simultáneamente verdaderas.
 Un argumento válido garantiza que la conclusión es verdadera, mientras que un conjunto inconsistente garantiza que no es posible que sus miembros sean todos simultáneamente verdaderos.
 >[!tldr] Relación entre Consistencia y Validez
 >El procedimiento para testear que un argumento es válido o no consta de los siguientes pasos:
@@ -44,31 +42,26 @@ Un argumento válido garantiza que la conclusión es verdadera, mientras que un 
 >4. Si este conjunto es inconsistente el argumento es válido, pero si el conjunto es consistente entonces el argumento es inválido.
 >
 >Este método es efectivo porque si las premisas, junto con la afirmación de que la conclusión es falsa, forman un conjunto consistente, entonces es concebible que las premisas sean verdaderas mientras que la conclusión es falsa. Esto indica que si la declaración "la conclusión es falsa" es verdadera, entonces la conclusión puede ser falsa a pesar de que las premisas sean verdaderas.
-
 ## Lenguajes y Teorías Formales 
-
 Al definir un lenguaje declarativo es necesario dar cuenta de tres componentes esenciales:
-
 1. **Sintaxis**: Define la manera en la que se escriben ***fórmulas legales*** en el lenguaje, establece cuáles son los símbolos legales del lenguaje y las reglas bajo las cuales formar expresiones aceptables o válidas. 
 2. **Semántica**: Determina el significado de las sentencias del lenguaje en el dominio, es decir, su designación en ese dominio. Así, se pone de manifiesto un compromiso en la relación de los símbolos del lenguaje con el dominio. Este compromiso semántico permite discutir la ***correctitud*** y/o ***veracidad*** del conocimiento de manera independiente al uso que de él se haga.
-3. **Pragmática**: Especifica el dominio para el cual se utilizará.
+3. **Pragmática**: Especifica el dominio para el cual se utilizará dicho lenguaje.
 
 Es posible que para cierto tipo de lenguajes sea necesario incluir o separar otros componentes, como lo puede ser la pronunciación o las tonadas.
 #### Alfabetos y Lenguajes
-Una expresión es una secuencia finita de símbolos. Cuando hablamos de "expresiones sobre el alfabeto $A$" se está hablando de aquellas expresiones compuesta exclusivamente de símbolos del alfabeto $A$. A los símbolos también se les denomina ***caracteres*** y a las expresiones, ***cadenas***.
+Una expresión es una secuencia finita de símbolos. Cuando hablamos de expresiones sobre el alfabeto $A$ se está hablando de aquellas expresiones compuesta exclusivamente de símbolos del alfabeto $A$. A los símbolos también se les denomina ***caracteres*** y a las expresiones, ***cadenas***.
 Las expresiones pueden contener la cantidad de caracteres repetidos que se quiera, pero para ser considerado una expresión de $A$ solo debe estar compuesta por caracteres de dicho alfabeto. Por otro lado, al conjunto conformado por todas las expresiones que pueden construirse sobre el alfabeto $A$ denominado $A^*$ se lo conoce como universo del discurso.
 Un lenguaje en este contexto no es más que un conjunto de expresiones, más concretamente decimos que un lenguaje sobre el alfabeto $A$ es cualquier subconjunto de $A^*$. Consideremos que nuestro alfabeto está constituido de la siguiente forma $A = \{a, b, c\}$, en este caso un lenguaje sobre este alfabeto podría ser $L_1 = \{aa, ba, bb, ca, c\}$, pero también lo podría ser $L_2 = \{b, ab, bcc\}$.
 ### Teoría de Pruebas
-Usualmente, esta teoría consiste de un conjunto de ***Reglas de Inferencia***. Cada una de estas reglas de inferencia es un patrón de argumentación, o de razonamiento reconocido como correcto. Es posible que la Teoría de Prueba y la Semántica no se adecuen.
-Si la teoría de prueba solo infiere respuestas correctas en acuerdo con la Semántica se dice que es ***sana, sensata o sólida***. Pero si la teoría de pruebas genera todas las respuestas correctas se dice que es ***completa***.
->[!info] Sensatez y Completitud de las Teorías de Prueba
->Las teorías de pruebas pueden ser sensatas, pero no completas o completas pero no sensatas o inclusive ser tanto completas como sensatas.
-
-Formalmente, decimos que una teoría formal $T$ está constituido por:
+Usualmente, esta teoría consiste de un conjunto de ***Reglas de Inferencia***. Cada una de estas reglas de inferencia es un patrón de argumentación, o de razonamiento reconocido como correcto. Es posible que la teoría de prueba y la semántica no se adecuen.
+Si la teoría de pruebas solo infiere respuestas correctas en acuerdo con la semántica se dice que es ***sana, sensata o sólida***. Si dicha teoría de pruebas además genera todas las respuestas correctas se dice que la misma es ***completa***.
+Formalmente, decimos que una teoría formal $\mathcal{T}$ está constituido por:
 1. Un conjunto contable de símbolos. Se llamará expresión a toda secuencia finita de símbolos.
-2. Un subconjunto de expresiones llamado ***Fórmulas Bien Formadas (FBF)***.
-3. Un subconjunto de fórmulas bien formadas llamados ***Axiomas***.
+2. Un subconjunto de expresiones denominadas ***Fórmulas Bien Formadas (FBF)***.
+3. Un subconjunto de fórmulas bien formadas denominadas ***Axiomas***.
 4. Un subconjunto de relaciones sobre las fórmulas bien formadas llamadas ***Reglas de Inferencia (RI)***.
+
 Todas estas componentes se pueden ver como conjuntos, que se engloban unos a otros, tal y como se ve en la imagen.
 ![[componentes-teoria-formal.png]]
 
@@ -81,54 +74,55 @@ Todas estas componentes se pueden ver como conjuntos, que se engloban unos a otr
 >
 >Al los conjuntos de símbolos contables se los suele denominados como ***alfabetos***.
 #### Esquemas, Meta-Variables e Instancias
-Un esquema provee un molde para especificar la forma de una expresión y se usan generalmente para expresar la forma de las fórmulas bien formadas. Por ejemplo, dado un conjunto de símbolos $\{1, 2, +, x, z\}$, en donde 1, 2, x y z son fórmulas bien formadas y siendo $P$ y $Q$ fórmulas bien formadas entonces $Q + P + Q$ (esquema) también es una fórmula bien formada. En este ejemplo tanto $P$ como $Q$ no son elementos del lenguaje, sino que hablan sobre el lenguaje, es decir especifican como escribir expresiones válidas en ese lenguaje, por eso se dice que son meta-variables.
+Un esquema provee un molde para especificar la forma de una expresión y se usan generalmente para expresar la forma de las fórmulas bien formadas. Por ejemplo, dado un conjunto de símbolos $\{1, 2, +, x, z\}$, en donde 1, 2, x y z son fórmulas bien formadas y siendo $P$ y $Q$ fórmulas bien formadas entonces $Q + P + Q$ (esquema) también es una fórmula bien formada.
+En el ejemplo anterior tanto $P$ como $Q$ no son elementos del lenguaje, sino que hablan sobre el lenguaje, es decir especifican expresiones válidas en ese lenguaje, por eso se dice que son meta-variables.
 Una ***instancia*** de un esquema se obtiene reemplazando cada meta-variable por una misma expresión del lenguaje. Por ejemplo:
 1. x + 2 + x
 2. 1 +1 + 1
 3. 2 + 1 + 2 + 1 + 2
+
 Para el último punto hay que aclarar una cosa, los esquemas mostrados como ejemplos se utilizan para generar fórmulas bien formadas, por lo que estas nuevas fórmulas también pueden ser reemplazadas en el esquema para crear nuevas fórmulas bien formadas.
 #### Reglas de Inferencia
 Una regla de inferencia es una relación $R$ de $n$ fórmulas bien formadas $(F_1, \cdots ,F_{n-1}, Q)$ tal que dadas $F_1, \cdots ,F_{n-1}$ y $Q$ se pueda decidir efectivamente si $(F_1, \cdots ,F_{n-1}, Q)$ están en la relación $R$. Si $(F_1, \cdots ,F_{n-1}, Q)$ están en la relación $R$ entonces $Q$ se dice una consecuencia directa de $F_1, F_2, \cdots,F_{n-1}$ por $R$. Ejemplos:
 - $P + Q$ es una consecuencia directa de $P$ y $Q$. Para toda fórmula bien formada $P$ y $Q$ define la relación $(P, Q, P + Q)$.
 - Dada la relación $(P, P*Q, Q)$ entonces se dice que $Q$ es una consecuencia directa de $P$ y $P*Q$ para toda fórmula bien formada $P$ y $Q$.
 
-Veamos algunos ejemplos de diferentes formas de describir reglas de inferencia, donde $P$ y $Q$ son meta-variables que representan fórmula bien formada. Si $Q$ es una consecuencia directa de $P$ y $P *Q$ entonces, para toda fórmula bien formada $P$ y $Q$, se puede escribir -> $P, P *Q \vdash Q$.
->[!info] Teoremas de una Teoría Formal
->Dado una teoría formal $T$, decimos que $P$ es un teorema si es una fórmula bien formada y además puede ser demostrada única y exclusivamente a través de axiomas y reglas de inferencia.
-#### Deducibilidad
-Sea $S$ un conjunto de fórmulas bien formadas y sea $P$ una fórmula bien formada en una teoría formal $T$, decimos que $P$ es deducible de $S$ en $T$, denotado $S \vdash P$, si existe una secuencia de fórmulas bien formadas de $T$, $P_1, P_2, \cdots, P_n$ tal que:
+Veamos algunos ejemplos de diferentes formas de describir reglas de inferencia, donde $P$ y $Q$ son meta-variables que representan fórmula bien formada. Si $Q$ es una consecuencia directa de $P$ y $P *Q$ entonces, para toda fórmula bien formada $P$ y $Q$, se puede escribir de la siguiente manera $P, P *Q \vdash Q$.
+>[!tldr] Teoremas de una Teoría Formal
+>Dado una teoría formal $\mathcal{T}$, decimos que $P$ es un teorema si es una fórmula bien formada y además puede ser demostrada única y exclusivamente a través de axiomas y reglas de inferencia.
+
+Sea $S$ un conjunto de fórmulas bien formadas y sea $P$ una fórmula bien formada en una teoría formal $\mathcal{T}$, decimos que $P$ es deducible de $S$ en $\mathcal{T}$, denotado $S \vdash P$, si existe una secuencia de fórmulas bien formadas de $\mathcal{T}$, $P_1, P_2, \cdots, P_n$ tal que:
 1. $P_n$ es $P$.
-2. Para $1 \leq i \leq n$, $P_i$ es una instancia de un axioma, o bien $P_i$ es una fórmula bien formada perteneciente a $S$ o bien $P_i$ es una consecuencia directa de algunas $P_j$ con $j < i$, necesarios para la aplicación de algunas de las reglas de inferencia de $T$.
+2. Para $1 \leq i \leq n$, $P_i$ es una instancia de un axioma, o bien $P_i$ es una fórmula bien formada perteneciente a $S$ o bien $P_i$ es una consecuencia directa de algunas $P_j$ con $j < i$, necesarios para la aplicación de algunas de las reglas de inferencia de $\mathcal{T}$.
 
-El conjunto $S$, se llama ***conjunto de hipótesis***, la secuencia $P_1, P_2, \cdots, P_n$ se llama ***derivación o prueba*** de $P$ a partir de $S$ en $T$.
-Sea $P$ una fórmula bien formada de una teoría $T$, entonces si $P$, puede ser deducible del conjunto vacío, denotado $\vdash P$, se dice que $P$ es un teorema en $T$ o que es demostrable en $T$. Es decir, en la secuencia de $P_i$ solo aparecen instancias de axiomas o son el resultado de aplicación de reglas de inferencia de $T$.
-
+El conjunto $S$, se llama ***conjunto de hipótesis***, la secuencia $P_1, P_2, \cdots, P_n$ se llama ***derivación o prueba*** de $P$ a partir de $S$ en $\mathcal{T}$.
+Sea $P$ una fórmula bien formada de una teoría $\mathcal{T}$, entonces si $P$, puede ser deducible del conjunto vacío, denotado $\vdash P$, se dice que $P$ es un teorema en $\mathcal{T}$ o que es demostrable en $\mathcal{T}$. Es decir, en la secuencia de $P_i$ solo aparecen instancias de axiomas o son el resultado de aplicación de reglas de inferencia de $\mathcal{T}$.
 >[!tldr] Propiedad de Monotonicidad
->Sean $S_1$ y $S_2$ conjuntos de fórmulas bien formadas, y $P$ y $Q$ fórmulas bien formadas de una teoría $T$, entonces:
+>Sean $S_1$ y $S_2$ conjuntos de fórmulas bien formadas, y $P$ y $Q$ fórmulas bien formadas de una teoría $\mathcal{T}$, entonces:
 >- Si $S_1$ es un subconjunto de $S_2$ y, $S_1 \vdash P$, entonces $S_2 \vdash P$ (Monotonicidad).
 >- $S_2 \vdash P$ si y solo si existe un subconjunto finito $S_1$ de $S_2$, tal que $S_1 \vdash P$ (Compacidad).
 >- Si $S_2 \vdash P$ y para cada fórmula bien formada $Q$ en $S_2$ se cumple que $S_1 \vdash Q$, entonces $S_1 \vdash P$. (Modularidad).
 #### Interpretación y Modelos Semánticos
-Una interpretación provee un significado para cada uno de los símbolos de una teoría formal $T$, de tal forma que toda fórmula bien formada de $T$ pueda pensarse como verdadera o falsa bajo esa interpretación.
-En este contexto, una interpretación $I$ es un modelo para un conjunto de fórmulas bien formadas $S$, si toda fórmula bien formada de $S$ es verdadera en su interpretación. Decimos que una interpretación $I$ provee un modelo para una teoría formal $T$, si es un modelo para el conjunto de teoremas de $T$.
+Una interpretación provee un significado para cada uno de los símbolos de una teoría formal $\mathcal{T}$, de tal forma que toda fórmula bien formada de $\mathcal{T}$ pueda pensarse como verdadera o falsa bajo esa interpretación.
+En este contexto, una interpretación $\mathcal{I}$ es un modelo para un conjunto de fórmulas bien formadas $S$, si toda fórmula bien formada de $S$ es verdadera en su interpretación. Decimos que una interpretación $\mathcal{I}$ provee un modelo para una teoría formal $\mathcal{T}$, si es un modelo para el conjunto de teoremas de $\mathcal{T}$.
+
 >[!example] Veracidad y Notaciones
->En una teoría $T$, una fórmula $P$ puede ser verdadera en todas las interpretaciones. Esto se denota de la siguiente manera $\vDash P$.
+>En una teoría $\mathcal{T}$, una fórmula $P$ puede ser verdadera en todas las interpretaciones. Esto se denota de la siguiente manera $\vDash P$.
 
-Hasta ahora se definió la sintaxis para la demostrabilidad de un teorema y para la verdad de las interpretaciones. Ambos conceptos no están en principio relacionados, lograr una relación entre ambos conceptos nos permitirá hablar por “sobre” la teoría y, por lo tanto, son nociones meta-teóricas.
+#### Conceptos MetaTeoricos
+Hasta ahora se definió la sintaxis para la demostrabilidad de un teorema y para la verdad de las interpretaciones. Ambos conceptos no están relacionados entre sí en principio, pero lograr dicha relación nos permitirá hablar por sobre la teoría y, por lo tanto, son nociones meta-teóricas.
+Una teoría formal $\mathcal{T}$, es ***completa*** si toda fórmulas bien formadas que es verdadera en todas las interpretaciones es demostrable en $\mathcal{T}$.
+$$\text{Si} \vDash P \Rightarrow \ \vdash P$$
 
->[!tldr] Conceptos Meta-Teóricos: Completitud y Sensatez.
-> - Una teoría formal $T$, es ***completa*** si toda fórmulas bien formadas que es verdadera en todas las interpretaciones es demostrable en $T$.
-> $$\text{Si} \vDash P \Rightarrow \ \vdash P$$
-> - Una teoría es ***sensata*** si cada sentencia de $T$ que es probable en $T$, es verdadera en todas las interpretaciones.
-> $$\text{Si} \vdash P \Rightarrow \ \vDash P $$
-> 
-> Una teoría formal puede ser completa y sensata, sólo alguna de las dos o no cumplir ninguna.
-> La sensatez es algo que debe demostrarse, no puede asumirse. Al mismo tiempo una teoría en la cual puede demostrarse todas las formulas bien formadas es completa, pero no sensata. Por otro lado, si una teoría es sensata y completa, entonces verdad es equivalente a deducción (verdad $\Leftrightarrow$ deducción).
+Una teoría es ***sensata*** si cada sentencia de $\mathcal{T}$ que es probable en $\mathcal{T}$, es verdadera en todas las interpretaciones.
+$$\text{Si} \vdash P \Rightarrow \ \vDash P $$
 
-## Nociones Computacionales
-Un método computacional se considera _**completo**_ si, dado cualquier enunciado $P$ dentro de una teoría formal $T$, al tomar $P$ como entrada, el método concluye en un tiempo finito indicando si $P$ es verdadero bajo todas las interpretaciones posibles. Por otro lado, una teoría formal se define como _**decidible**_ si existe un procedimiento efectivo capaz de determinar, para cada enunciado de la teoría, si es probable o no.
-Como podemos observar, estas definiciones son muy similares a las realizadas en la [[2. Maquina Universal de Turing y Computabilidad#Tesis de Turing-Church|Tesis de Turing-Church]], la cual establece cuándo un problema es soluble o no desde un punto de vista computacional.
+Una teoría formal puede ser completa y sensata, solo completa o sensata e incluso no ser ni completo ni sensata. La sensatez es algo que debe demostrarse, no puede asumirse. Al mismo tiempo una teoría en la cual puede demostrarse todas las formulas bien formadas es completa, pero no sensata. Por otro lado, si una teoría es sensata y completa, entonces verdad es equivalente a deducción (verdad $\Leftrightarrow$ deducción).
 
 >[!tldr] Consistencia de una Teoría Formal
->Una teoría formal $T$ es consistente si no contiene fórmulas bien formadas tales que tanto las fórmulas como su negación sean teoremas de $T$.
+>Una teoría formal $\mathcal{T}$ es consistente si no contiene fórmulas bien formadas tales que tanto las fórmulas como su negación sean teoremas de $\mathcal{T}$.
+## Nociones Computacionales
+Un método computacional se considera _**completo**_ si, dado cualquier enunciado $P$ dentro de una teoría formal $\mathcal{T}$, al tomar $P$ como entrada, el método concluye en un tiempo finito indicando si $P$ es verdadero bajo todas las interpretaciones posibles. Por otro lado, una teoría formal se define como _**decidible**_ si existe un procedimiento efectivo capaz de determinar, para cada enunciado de la teoría, si es probable o no.
+Como podemos observar, estas definiciones son muy similares a las realizadas en la [[2. Maquina Universal de Turing y Computabilidad#Tesis de Turing-Church|Tesis de Turing-Church]], la cual establece cuándo un problema es soluble o no desde un punto de vista computacional.
+
 
