--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Deduccion y Computacion del Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Deduccion y Computacion del Calculo Proposicional.md
@@ -1,32 +1,25 @@
-Recordemos entonces que un [[1. Calculo Proposicional#^conjunto-suficiente-conectivos|conjunto suficiente de conectivos]] es un conjunto de conectivos que nos permiten construir todas las funciones lógicas existentes. Además, recordemos que la deducción de una teoría formal está definida a partir de *axiomas* y *reglas de inferencia*. Es posible definir diferentes ***aparatos deductivos*** o ***máquinas de inferencia*** a partir de diferentes conjuntos de axiomas y reglas de inferencia, al momento de la definición de estos mecanismos deductivos es importante garantizar la completitud y sensatez[^1] de estos mismos.
-
+Recordemos entonces que un [[1. Calculo Proposicional#^conjunto-suficiente-conectivos|conjunto suficiente de conectivos]] es un conjunto de conectivos que nos permiten construir todas las funciones lógicas existentes. Además, recordemos que la deducción de una teoría formal está definida a partir de *axiomas* y *reglas de inferencia*. 
+Es posible definir diferentes ***aparatos deductivos*** o ***máquinas de inferencia*** a partir de diferentes conjuntos de axiomas y reglas de inferencia, al momento de la definición de estos mecanismos deductivos es importante garantizar la completitud y sensatez[^1] de estos mismos.
 >[!tldr] Máquinas de Inferencia y Equivalencia
 >Dada una semántica $\vDash P$, si poseemos dos máquinas de inferencia $\vdash_1 P$ y $\vdash_2 P$. Si ambas máquinas son sensatas y completas sobre la semántica $\vDash P$, entonces $\vdash_1 P$ y $\vdash_2 P$ son equivalentes.
 
-Al deducir se procesan símbolos. Por esta razón, es importante encontrar formas eficientes de realizar este proceso de manera automática. Aunque la tarea es posible de realizar en el esquema planteado anteriormente, es difícil implementar la una máquina de inferencia con los procedimientos vistos hasta el momento. A continuación, veremos una manera de realizar deducciones que es más sencilla de automatizar.
-
+Al deducir se procesan símbolos. Por esta razón, es importante encontrar formas eficientes de realizar este proceso de manera automática. Aunque la tarea es posible de realizar en el esquema planteado anteriormente, es difícil implementar una máquina de inferencia con los procedimientos vistos hasta el momento. A continuación, veremos una manera de realizar deducciones que es más sencilla de automatizar.
 ## Computación para el Cálculo Proposicional
-
-Un ***literal*** en la teoría $\mathcal{L}$, definida anteriormente, no es más que una letra proposicional o su negación. Se denomina ***cláusula*** a las disyunciones ($\vee$) de literales, por ejemplo $A \vee ¬B$. $A$ por su sola también es considerada una cláusula. Por otro lado, a las conjunciones de cláusulas se las denomina ***sentencias***, un ejemplo de sentencia serían $(A \vee B \vee ¬ C) \wedge (¬D \vee C)$, $A \wedge ¬A$, entre otras.
+Un ***literal*** en la teoría $\mathcal{L}$, no es más que una letra proposicional o su negación. Se denomina ***cláusula*** a las disyunciones ($\vee$) de literales, por ejemplo $A \vee ¬B$, aunque $A$ por su sola también es considerada una cláusula. Por otro lado, a las conjunciones ($\wedge$) de cláusulas se las denomina ***sentencias***, un ejemplo de sentencia serían $(A \vee B \vee ¬ C) \wedge (¬D \vee C)$, $A \wedge ¬A$, entre otras.
 La computación en el cálculo proposicional se basará en la ***eliminación de literales complementarios (CLE)***. Dos literales se dicen complementarios si uno es la negación del otro, por ejemplo $A$ y $¬A$ son complementarios. A modo de facilitar la escritura se introdujeron dos nuevos símbolos:
-
 - $\tau$: Representa todas las fórmulas bien formadas del tipo $¬A \vee A$.
 - $\Box$: Representa todas las fórmulas bien formadas del tipo $¬A \wedge A$.
 
 En este caso cada fórmula bien formada se expresará en un formato que solo usa los conectivos $\{ ¬,\wedge ,\vee \}$, denominado ***forma normal conjuntiva reducida (FNCR)***.
-Toda fórmula bien formada del cálculo proposicional puede ser reescrita, en forma equivalente, utilizando solo el conjunto de conectivos antes mostrado, ya que este es un conjunto suficiente de conectivos. Una forma normal es un “formato” estándar al que se puede llegar desde una fórmula bien formada arbitraria por medio de un proceso algorítmico. Si no se repiten letras proposicionales dentro de las cláusulas se dice que se tiene una forma normal conjuntiva reducida.
+Toda fórmula bien formada del cálculo proposicional puede ser reescrita, en forma equivalente, utilizando solo el conjunto de conectivos antes mostrado, ya que este es un conjunto suficiente de conectivos.
+Una forma normal es un formato estándar al que se puede llegar desde una fórmula bien formada arbitraria por medio de un proceso algorítmico. Si no se repiten letras proposicionales dentro de las cláusulas se dice que se tiene una *forma normal conjuntiva reducida*.
 Una fórmula bien formada que usa los conectivos $\{ ¬,\wedge ,\vee \}$ está en forma normal conjuntiva si:
-
 1. Ninguna subfórmula bajo el conectivo $¬$ usa $\{ ¬,\wedge ,\vee, \tau, \Box \}$.
 2. Ninguna subfórmula bajo el conectivo $\vee$ usa $\{\wedge, \tau, \Box\}$.
 3. Ninguna subfórmula bajo el conectivo $\vee$ usa $\{ \tau, \Box\}$.
 
-Se dice que una fórmula bien formada está en forma normal conjuntiva reducida si:
-
-1. Ninguna letra proposicional aparece más de una vez dentro del alcance de una $\vee$.
-
+Se dice que una fórmula bien formada está en forma normal conjuntiva reducida si ninguna letra proposicional aparece más de una vez dentro del alcance de una $\vee$.
 Cualquier fórmula bien formada $S$ puede transformarse en una fórmula bien formada $S'$ que se encuentra en forma normal conjuntiva reducida. Para ello presentaremos un procedimiento que realiza la transformación.
-
 - $P \rightarrow Q$ se transforma en $¬P \vee Q$.
 - $P \equiv Q$ se transforma en $(¬P \vee Q) \wedge (P \vee ¬Q)$.
 - $¬¬P$ se reduce a $P$.
@@ -42,69 +35,60 @@ Cualquier fórmula bien formada $S$ puede transformarse en una fórmula bien for
 - $P \wedge \Box$ se reduce a $\Box$.
 
 Estas propiedades nos permiten transformar una fórmula bien formada en forma normal conjuntiva, si queremos que también sea reducida debemos asegurar que ninguna de las letras proposicionales aparezca más de una vez dentro del alcance de $\vee$, podemos eliminar estas repeticiones aplicando las siguientes equivalencias:
-
 - $A \vee A$ se reduce a $A$.
 - $¬A \vee ¬A$ se reduce a $¬A$.
 - $A \vee ¬A$ se reduce a $\tau$.
 
 >[!tldr] Definición del Lenguaje Clausal
 >Se puede expresar las formas de las sentencias en forma normal conjuntiva reducida aplicando alguna notación como BNF, aunque también se puede interpretar a estas mismas como conjuntos, esto nos ayudará a entender de mejor manera como operan lenguajes lógicos como Prolog.
-
 ### Deducción por Resolución
-
 Dado un conjunto de cláusulas $S$, una deducción por resolución de la cláusula $A$, denotada como $S \rightarrow A$, es una secuencia finita de cláusulas $B_1, \cdots, B_n$ donde:
-
 1. $B_n$ es $A$.
 2. Todo $B_i$ o es elemento de $S$ o $B_i$ es una resolvente de $B_p$ y $B_k$ con $p, k < i$. 
 
->[!tldr] Refutación por Resolución
->Una deducción por resolución de la cláusula vacía $\Box$ a partir de $S$ se llama refutación por resolución de $S$ o simplemente refutación de $S$.
->Esto se puede utilizar para probar teoremas, ya que se puede utilizar la prueba de consistencia para verificar que dicha sentencia es un teorema, el procedimiento comenzaría con negar la sentencia y corroborar que la resolución da una cláusula vacía. Si esto es así entonces la sentencia es un teorema, de lo contrario esto solo sería una sentencia.
-
-### Cláusulas de Horn
-
+Una deducción por resolución de la cláusula vacía $\Box$ a partir de $S$ se llama refutación por resolución de $S$ o simplemente refutación de $S$.
+Esto se puede utilizar para probar teoremas, ya que se puede utilizar la prueba de consistencia para verificar que dicha sentencia es un teorema, el procedimiento comenzaría con negar la sentencia y corroborar que la resolución da una cláusula vacía. Si esto es así entonces la sentencia es un teorema, de lo contrario esto solo sería una sentencia.
+#### Cláusulas de Horn
 Una cláusula de Horn es una cláusula con a lo suma un literal positivo $¬A \vee \cdots \vee ¬A_N \vee B_1$. Estas se puede reescribir de la siguiente manera:
-
 1. $¬(A \wedge \cdots \wedge A_n) \vee B_1$.
 2. $(A \wedge \cdots \wedge A_n) \rightarrow B_1$.
 3. $B_1 \leftarrow (A \wedge \cdots \wedge A_n)$.
 
 Existen cuatro tipos principales de cláusulas de Horn:
-
 1. $B_1 \leftarrow (A_1 \wedge \cdots \wedge A_n)$.
 2. $B_1 \leftarrow$.
 3. $\leftarrow (A_1 \wedge \cdots \wedge A_n)$.
 4. $\perp$.
 
 La primera y segunda cláusula se dicen definidas, aunque la primera recibe el nombre de *reglas* y la segunda recibe el nombre de *hechos*.
-
 >[!example] Método de Computación Lógica
 >Supongamos que queremos probar que $Q$ se deduce de un conjunto $P$. Si de un conjunto $P$ se prueba $Q$, entonces $P \cup \{¬Q\}$ tiene que ser inconsistente, por lo tanto, debe existir una refutación de $P \cup \{¬Q\}$.
 >Veamos esto con un ejemplo, si queremos probar que $A$ se deduce de $P = \{¬B \vee A, B\}$, entonces negamos la consulta quedándonos $¬A$ y $P \cup \{¬A\}$ lo que nos ayudará en la refutación. Si querríamos expresar esto en una cláusula de Horn nos quedaría $\leftarrow Q$. 
-
 ## Completitud y Computabilidad del Cálculo Proposicional
-
 Hemos descrito el método de resolución proposicional, que permite generar refutaciones de un conjunto de cláusulas. Al refutar dichas cláusulas, demostramos que su conjunción es contradictoria, es decir, imposible de satisfacer.
 El concepto de resolvente fija se refiere a una cláusula $C$, que actúa como la resolvente de un par de cláusulas de un conjunto $S$. Si $C$ es una resolvente fija de un par de cláusulas de $S$, denotado como $S \longrightarrow C$. Usaremos la notación $S \stackrel{*}{\longrightarrow} C$ cuando exista una deducción por resolución de $C$ a partir de $S$. Asimismo, $S \stackrel{*}{\longrightarrow} \square$ indica que existe una deducción por resolución de la contradicción, es decir de la refutación de $C$ a partir de $S$.
 Para entender lo anterior tengamos en cuenta el siguiente conjunto $S = \{ P \lor Q, \neg P \lor R, ¬Q \lor R \}$, podemos deducir $R$ por resolución, es decir, $S \stackrel{*}{\longrightarrow} R$. Para ello podemos refutar $R$ agregando su negación al conjunto $S$ y aplicando resolución, en ese caso nuestro nuevo conjunto estaría conformado de la siguiente manera $S = \{ P \lor Q, \neg P \lor R, \neg Q \lor R, \neg R \}$. Dicho conjunto es refutable, ya que $S \stackrel{*}{\longrightarrow} \square$, por lo tanto, $R$ es deducible en $S$.
-Como mostramos en el ejemplo anterior, si bien a partir de un conjunto de cláusulas $S$ se puede deducir por resolución una cláusula $C$, la deducción no necesariamente es única. En el ejemplo antes dado podemos refutar $R$ mediante dos formas posibles. Por lo tanto, lo óptimo sería desarrollar un método algorítmico para verificar si el conjunto $S$ es refutable. El procedimiento ya existe y es el siguiente.
-
+Como mostramos en el ejemplo anterior, si bien a partir de un conjunto de cláusulas $S$ se puede deducir por resolución una cláusula $C$, la deducción no necesariamente es única. En el ejemplo antes dado podemos refutar $R$ de dos formas posibles. Por lo tanto, lo óptimo sería desarrollar un método algorítmico para verificar si el conjunto $S$ es refutable. El procedimiento ya existe y es el siguiente.
 ![[procedimiento-refutacion.png]]
 
 Dado un conjunto $S$ de cláusulas, definimos $\Re(S)$ como la unión de $S$ con el conjunto de todas las resolventes fijas de la cláusula $S$, formalmente denotado:
-
 $$\Re(S) = S \cup \{C : C \ \text{es una resolvente de } C_1 \text{ y } C_2 \ / \ C_1, C_2 \in S\}$$
-Definimos entonces a la aplicación de $\Re$ de la siguiente manera $\Re^0(S) = S$ siendo $\Re^{n + 1}(S) = \Re(\Re^n(S))$ el resultado de aplicar este procedimiento múltiples veces. Notamos que para cualquier $S$ se cumple lo siguiente:
 
+Definimos entonces a la aplicación de $\Re$ de la siguiente manera:
+$$
+\begin{flalign*}
+& \Re^0(S) = S &&\\
+& \Re^{n + 1}(S) = \Re(\Re^n(S)) &&\\
+\end{flalign*}
+$$
+Notamos que para cualquier $S$ se cumple lo siguiente:
 $$S = \Re^0(S) \subseteq \Re^1(S) \subseteq \Re^2(S) \subseteq \dots \subseteq \Re^n(S)$$
 
 Es decir, la aplicación sucesiva del operador $\Re$ produce una secuencia creciente, en el sentido de la inclusión de conjuntos. La razón es que si $X$ es un conjunto cualquiera de sentencias, el conjunto $\Re(X)$ es el resultado de agregar a $X$ las resolventes que se calcularon a partir de las cláusulas que contiene el conjunto inicial.
-Si nos planteamos la posibilidad de que esa secuencia termine, es decir si es posible llegar a un punto donde $\Re^m(S) = \Re^k(S)$ para todo $k > m$ este sería un ***punto fijo*** del operador $\Re$. Nótese que si una secuencia creciente tiene una cota superior, entonces la secuencia tiene un límite. Una cota posible para el conjunto $S$ presentado anteriormente podría ser $S^*$, es decir el conjunto de todas las posibles cláusulas que se pueden construir con los literales que aparecen en $S$. Esto quiere decir que la secuencia generada por $\Re$ sobre cualquier conjunto $S$ termina en un cierto valor de $n$, es decir la operación de la resolvente se cierra luego de un determinado número finito de pasos. Por lo tanto, dado cualquier conjunto $S$ de cláusulas, la proposición $S \stackrel{*}{\longrightarrow} \square$ es ***decidible***.
-
+Si nos planteamos la posibilidad de que esa secuencia termine, es decir si es posible llegar a un punto donde $\Re^m(S) = \Re^k(S)$ para todo $k > m$ este sería un ***punto fijo*** del operador $\Re$. Nótese que si una secuencia creciente tiene una cota superior, entonces la secuencia tiene un límite.
+Una cota posible para el conjunto $S$ presentado anteriormente podría ser $S^*$, es decir el conjunto de todas las posibles cláusulas que se pueden construir con los literales que aparecen en $S$. Esto quiere decir que la secuencia generada por $\Re$ sobre cualquier conjunto $S$ termina en un cierto valor de $n$, es decir la operación de la resolvente se cierra luego de un determinado número finito de pasos. Por lo tanto, dado cualquier conjunto $S$ de cláusulas, la proposición $S \stackrel{*}{\longrightarrow} \square$ es ***decidible***.
 ## Resultados Meta-Teóricos
-
 A continuación pasaremos a describir una serie de lemas y teoremas que nos ayudaran a probar que el cálculo proposicional es completo y sensato[^2]. Además de una serie de definiciones.
-
 1. Si $P$ es un axioma, entonces $P$ es una tautología.
 2. Si $\vdash P$ entonces $\vDash P$. Este teorema asegura la sensatez de la teoría $\mathcal{L}$ presentada con anterioridad.
 3. Si $S$ es un conjunto ***insatisfacible*** de cláusulas fijas, tal que $A \in S$ y $B \subseteq A$, entonces $S$ con $A$ reemplazado con $B$ es un conjunto insatisfacible.
@@ -121,7 +105,6 @@ A continuación pasaremos a describir una serie de lemas y teoremas que nos ayud
 6. Si $¬S \stackrel{*}{\longrightarrow} \square$ entonces $\vdash S$.
 
 Con todos estos teoremas y lemas ya presentados podríamos crear entonces la siguiente secuencia:
-
 $$\vdash S \Rightarrow \ \vDash S \Rightarrow ¬S \stackrel{*}{\longrightarrow} \square \Rightarrow \ \vdash S$$
 
 Entonces podríamos decir que en el cálculo proposicional vale que $\vdash S$ si y solo si $\vDash S$ si y solo si $¬S \stackrel{*}{\longrightarrow} \square$.
