--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 4/1. Substitucion y Unificacion.md
@@ -3,10 +3,9 @@ En el cálculo proposicional se puede transformar una fórmula bien formada arbi
 A pesar de esto existe una forma especial denominada ***forma prenexa*** en la que todos los cuantificadores preceden a una fórmula bien formada sin ellos, es decir, todos los cuantificadores se encuentran a la derecha de la fórmula bien formada.
 Una fórmula bien formada está en forma prenexa si cada variable está cuantificada y todos los cuantificadores preceden a una sentencia sin cuantificadores. El conjunto de los cuantificadores se denomina ***prefijo*** y las sentencias siguientes reciben el nombre de matriz.
 Supongamos entonces que tenemos la siguiente fórmula bien formada $(((\forall x)A(x) \vee (\exists y)B(y)) \wedge (\exists z)C(z))$ dicha sentencia transformada a forma prenexa quedaría de la siguiente manera $(\forall x)(\exists y)(\exists z)((A(x)  \vee B(y))\wedge C(z))$.
-
 >[!caution] Orden de los Cuantificadores en la Forma Prenexa
 >El orden en el que se ubican los cuantificadores en la forma prenexa importa, ya que en caso de alterar el orden se puede alterar también el significado de la sentencia. Por esta razón los cuantificadores en la forma prenexa se colocan en el orden en el que van siendo encontrados en la sentencia.
->Puede existir ocasiones existan variables libres en los términos que forman parte de la sentencia. Recordemos que una de las condiciones de la forma prenexa es que todas las sentencias deben estar cuantificadas, en estos casos se debe agregar un cuantificador universal al principio del prefijo para clausurar dichas variables, esto se debe a que el orden para los cuantificadores universales no es importa. El orden debe ser respetado para los cuantificadores existenciales porque esos sí alteran la interpretación de la sentencia.
+>Puede existir ocasiones en la que se encuentren variables libres en los términos que forman parte de la sentencia. Recordemos que una de las condiciones de la forma prenexa es que todas las sentencias deben estar cuantificadas, en estos casos se debe agregar un cuantificador universal al principio del prefijo para clausurar dichas variables, esto se debe a que el orden para los cuantificadores universales no es importa. El orden debe ser respetado para los cuantificadores existenciales porque esos sí alteran la interpretación de la sentencia.
 
 Dada una fórmula bien formada arbitraria existe un procedimiento para obtener una fórmula equivalente en forma prenexa, la cual consta de los siguientes pasos:
 1. Se transforman las relaciones con conectivos más complejos como $\equiv$ y $\rightarrow$ a formas equivalentes que no utilicen dichos conectivos.
@@ -32,8 +31,8 @@ Sea $A$ una fórmula bien formada en forma prenexa y supongamos que el prefijo d
 1. Se reemplaza cada aparición de la variable $x$ en la matriz de $A$ por un término $sk_i(x_1, x_2, \cdots, x_n)$ donde $sk_i$ es una función n-aria que no aparece en la matriz de $A$. La lista de variables $x_1, x_2, \cdots, x_n$ está formada por las variables que aparecen en los cuantificadores universales del prefijo de $A$ que aparecen a la izquierda de $(\exists x)$.
 2. Si no aparece ningún cuantificador universal a la izquierda de $(\exists x)$ se reemplaza a la variable $x$ en la matriz de $A$ por una constante, que no pertenezca a la matriz de $A$.
 
-Este proceso se repite hasta que no queden cuantificadores existenciales en el prefijo de $A$. Por ejemplo para la siguiente fórmula en forma prenexa $(\forall x)(\exists y)(\exists z)((A(x) \vee B(y)) \wedge C(z))$ la fórmula resultante de aplicar el proceso de skolemización es la siguiente $(\forall x)((A(x) \vee B(sk_1(x)))\wedge C(sk_2(x)))$ donde $sk_1$ y $sk_2$. Veamos ahora la siguiente fórmula $(\exists x)(\forall y)(\exists z)(A(x) \wedge (B(y) \vee C(z)))$ en este caso la fórmula skolemizada nos quedaría $(\forall y)(A(a) \wedge (B(y) \vee C(sk_3(y)))$ en este caso $a$ es una constante arbitraria que no aparecía en la matriz de $A$ y  $sk3$ es una función de Skolem.
-
+Este proceso se repite hasta que no queden cuantificadores existenciales en el prefijo de $A$. Por ejemplo para la siguiente fórmula en forma prenexa $(\forall x)(\exists y)(\exists z)((A(x) \vee B(y)) \wedge C(z))$ la fórmula resultante de aplicar el proceso de skolemización es la siguiente $(\forall x)((A(x) \vee B(sk_1(x)))\wedge C(sk_2(x)))$ donde $sk_1$ y $sk_2$ son términos de skolem para $y$ y $z$ respectivamente.
+Veamos ahora la siguiente fórmula $(\exists x)(\forall y)(\exists z)(A(x) \wedge (B(y) \vee C(z)))$ en este caso la fórmula skolemizada nos quedaría $(\forall y)(A(a) \wedge (B(y) \vee C(sk_3(y)))$ en este caso $a$ es una constante arbitraria que no aparecía en la matriz de $A$ y  $sk3$ es una función de Skolem.
 >[!tldr] Relación entre Forma de Skolem y Forma Prenexa
 >La forma de Skolem no es equivalente a la forma prenexa, pero la implica lógicamente, es decir, cada vez que la forma skolemizada es verdadera la forma prenexa también lo es. Sin embargo, la forma prenexa es satisfacible si y solo si la forma de Skolem es satisfacible. Formalmente se denota de la siguiente manera:
 >$$S_k \vDash P_x \wedge P_x \text{ es satisfacible si } S_k \text{es satisfacible}$$
@@ -41,19 +40,16 @@ Este proceso se repite hasta que no queden cuantificadores existenciales en el p
 Recordemos que el mecanismo lógico de computación es el cálculo de resolventes a través de la eliminación de literales complementarios. La forma prenexa skolemizada contiene un prefijo de cuantificadores universales y una matriz en forma clausal que fácilmente puede transformarse a forma normal conjuntiva reducida.
 Una vez que se hace esto se puede eliminar el prefijo asumiendo que todas las variables que figuran en la matriz se encuentran cuantificadas universalmente. Por ejemplo, la fórmula skolemizada $(\forall y)(A(a) \wedge (B(y) \vee C(sk_3(y)))$ se transforma en $(A(a) \wedge (B(y) \vee C(sk_3(y)))$.
 En la lógica proposicional, se utiliza la eliminación de literales complementarios entre cláusulas para obtener resolventes. En el cálculo de predicados también se utilizará la eliminación de literales complementarios, pero en $\mathcal{P}$ hay constantes, variables y funciones lo que introduce dificultades a la hora de definir que términos son complementarios. Para mayor entendimiento véase la imagen.
-
 ![[pares-complementarios.png]]
 
 >[!tldr] Concepto de Variables Lógicas
 >Una variable lógica representa un individuo no especificado, pero único. Esto contrasta con las variables en los lenguajes de programación convencionales en los que una variable representa almacenamiento en forma abstracta.
 >La forma por la que se refina la especificación del individuo representado por la variable lógica es la ***instanciación***. Una vez instanciada la variable lógica esta no podrá ser reinstanciada a menos que esta instanciación se vuelva atrás, por ejemplo, en el caso de Prolog una vez fallan todas las consultas con una instancia en particular, vuelve hacia atrás e instancia la variable con otro valor.
 >El mecanismo para producir esta instanciación involucra el uso de ***substituciones***. 
-
 ### Substituciones y Unificación
 Existen descripciones de individuos que al ser substituidas en las variables hacen que pares que no son sintácticamente complementarios produzcan pares complementarios. Esto se logra utilizando una substitución particular que restrinja la especificación de los individuos en los literales que forman el par, de manera de evidenciar la forma en que serían complementarios. El proceso de encontrar descripciones adecuadas para utilizar en estas substituciones de las variables se denomina ***unificación***.
-
 >[!tldr] Extención del Concepto de Término
->Los términos son ***designadores*** de individuos, es decir, constantes individuales. Por definición las constantes y variables son términos, al igual que las letras funcionales, con la diferencia que estas son considerados términos compuestos ,porque pueden estar compuestas por varios términos.
+>Los términos son ***designadores*** de individuos, es decir, constantes individuales. Por definición las constantes y variables son términos, al igual que las letras funcionales, con la diferencia que estas son considerados términos compuestos porque pueden estar compuestas por varios términos.
 >Los ***términos fijos*** son aquellos términos que designan a un único individuo, mientras que los términos que contiene variables designan a un conjunto de individuos.
 
 Una substitución es un conjunto finito de $\sigma$, posiblemente vacío, de pares de la forma $(t_i, x_i)$, donde $x_i$ es una variable y $t_i$ es un término, además se debe cumplir que:
@@ -65,34 +61,30 @@ Una substitución es un conjunto finito de $\sigma$, posiblemente vacío, de par
 
 La manera de denotar una substitución $\sigma$ varía, ya que existen diversas formas de denotarlo, por cuestiones de practicidad la denotaremos de la siguiente manera $[(t_1, x_1),(t_2, x_2), \cdots, (t_n, x_n)]$, donde cada par de componentes $(t_i, x_i)$ expresa el requerimiento de que se reemplace con el término $t_i$ cada aparición de $x_i$. Las substituciones pueden aplicarse sobre términos o fórmulas bien formadas, por lo que usaremos la palabra ***expresión*** para referirnos a estos.
 Definimos a la aplicación de una sustitución $\sigma$ a una expresión $A$ denotado como $A\sigma$, como el término o fórmula bien formada obtenida de $A$ reemplazando cada aparición de $x$ por $t$ en $A$ para cada par $(t, x)$ en $\sigma$. Obsérvese en este caso que si $\sigma$ es un conjunto vacío la aplicación de esta substitución sobre $A$ es $A$ misma.
-
 >[!example] Ejemplo de Aplicación de una Substitución
 >Dado un término cualquiera como lo puede ser $f(x, b)$ y un conjunto de substitución $\sigma = [(a, x)]$ el resultado de aplicar esta substitución sobre este término es $f(a, b)$ y se denota de la siguiente manera:
 >$$f(x,b)\sigma = f(x,b)[(a,x)] = f(a, b)$$
 
 $A$ se dice que es una ***instancia de una substitución*** de $B$ si existe una substitución $\sigma$ tal que $A = B\sigma$.
 Sean $\sigma = [(t_1, x_1),(t_2, x_2),\cdots, (t_n, x_n)]$ una substitución arbitraria y $\theta = [(s, v)]$ una substitución unitaria con la característica de que $v \neq x_i$ y $x_i$ no aparece en $s$ cualquiera sea $i$, tal que $1 \geq i \geq n$. Entonces definimos la ***composición*** de $\sigma$ y $\theta$ de la siguiente manera:
-
 $$\begin{align*} \sigma\theta &= \left[ (t_1, x_1), \quad (t_2, x_2), \quad \ldots, \quad (t_n, x_n) \right] \left[ (s, v) \right] \\ &= \left[ (t_1 \left[ (s, v) \right], x_1), \quad (t_2 \left[ (s, v) \right], x_2), \quad \ldots, \quad (t_n \left[ (s, v) \right], x_n), \quad (s, v) \right] \end{align*}$$
 
 >[!info] Lemas Asociados
 >- Sea $A$ una expresión y sean $\sigma$ y $\theta$ dos substituciones, entonces $(A\sigma)\theta = A(\sigma\theta)$.
 >- Sean $\sigma$, $\theta$ y $\mu$ tres substituciones, entonces $(\sigma\theta)\mu = \sigma(\theta\mu)$.
-
 ### Substituciones Unificadoras
 Sea $\mathbb{L} = \{L_1, L_2. \cdots, L_n\}$ un conjunto de expresiones y $\theta$ una substitución. Decimos que $\mathbb{L}$ es unificado por $\theta$ si $L_1\theta = L_2\theta = \cdots = L_n\theta$. La substitución $\theta$ recibe el nombre de ***substitución unificadora*** o simplemente ***unificador***. Nótese que si $\theta$ es un unificador de $\mathbb{L}$ entonces el conjunto de $\mathbb{L} = \{L_1\theta, L_2\theta, \cdots, L_n\theta\}$ es un conjunto con un solo elemento.
 Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones y $\theta$ una substitución. Decimos que $\theta$ es una ***substitución unificadora más general*** o ***unificadora más general*** si para cualquier otro unificador $\mu$ existe una substitución $\lambda$ tal que $\mathbb{L}\mu = \mathbb{L}\theta\lambda$.
-
 >[!example] Ejemplo de Substitución Unificadora más General
 >Supongamos que tenemos el siguiente conjunto de expresiones $\mathbb{L} = \{p(x), p(y)\}$ y tenemos los siguientes unificadores:
 >1. $\mu = {(a, x), (a, y)}$.
 >2. $\theta = [(x/y)]$
+>
 >El primer unificador unifica $\mathbb{L}\mu = \{p(a)\}$, mientras que el segundo unificador unifica $\mathbb{L}\theta = \{p(x)\}$. En este caso el segundo unificador es más general porque permite que las variables permanezcan, es decir, el término resultante es menos específico.
 
-Intuitivamente, un unificador más general de un conjunto de expresiones es aquel que hace la menor cantidad y la más general de las substituciones necesarias para unificar ese dado conjunto de expresiones. Claramente, es posible que para un conjunto de expresiones particular no exista una substitución unificadora, sin embargo, si existiera un unificador entonces siempre es posible hallar un unificador más general.
-
+Intuitivamente, un unificador más general de un conjunto de expresiones es aquel que hace la menor cantidad y la más general de las substituciones necesarias para unificar ese conjunto de expresiones. Claramente, es posible que para un conjunto de expresiones particular no exista una substitución unificadora, sin embargo, si existiera un unificador entonces siempre es posible hallar un unificador más general.
 >[!tldr] Conjunto de Desacuerdo
->Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones. El ***conjunto de desacuerdo*** de $\mathbb{L}$ es el conjunto de subexpresiones bien formadas de las expresiones de $\mathbb{L}$ que comienza en la primera posición, de izquierda a derecha, en la que no todas las expresiones coinciden. Por ejemplo dado $\mathbb{L} = \{p(x, f(x, g(y)), v), p(x, f(x, z), w)\}$ el conjunto de desacuerdo es $\{g(y), z\}$, ya que son las primeras subexpresiones en la que ambas expresiones principales disciernen.
+>Sea $\mathbb{L} = \{L_1, L_2, \cdots, L_n\}$ un conjunto de expresiones. El ***conjunto de desacuerdo*** $\mathcal{D}$ de $\mathbb{L}$ es el conjunto de subexpresiones bien formadas de expresiones de $\mathbb{L}$ que comienza en la primera posición, de izquierda a derecha, en la que no todas las expresiones coinciden. Por ejemplo dado $\mathbb{L} = \{p(x, f(x, g(y)), v), p(x, f(x, z), w)\}$ el conjunto de desacuerdo es $\mathcal{D} = \{g(y), z\}$, ya que son las primeras subexpresiones en la que ambas expresiones principales disciernen.
 >Nótese que dado un determinado conjunto $\mathbb{L}$ de expresiones, el conjunto de desacuerdo de $\mathbb{L}$ puede ser: 
 >
 >1. El mismo conjunto, en tal caso $\mathbb{L}$ no es unificable.
@@ -106,7 +98,6 @@ Intuitivamente, un unificador más general de un conjunto de expresiones es aque
 >3. Letras funcionales ordenadas primero por aridad y luego alfabéticamente.
 >4. Letras predicativas ordenadas primero por aridad y luego alfabéticamente.
 >5. Conectivos lógicos los cuales poseen el orden de precedencia ya descripto anteriormente.
-
 ### Procedimiento de Unificación de Robinson
 El proceso de unificación de Robinson es un algoritmo fundamental, utilizado para determinar si existe una sustitución que hace que dos expresiones lógicas sean idénticas. Este procedimiento cuenta con los siguientes pasos:
 1. Sea $\mathbb{L}$ un conjunto de expresiones, $\theta_1 = \varepsilon$ y $k = 0$
@@ -117,8 +108,6 @@ El proceso de unificación de Robinson es un algoritmo fundamental, utilizado pa
 >La comprobación realizada por el tercer paso en el cual se comprueba si $s_k$ es una variable y no aparece en $t_k$ recibe el nombre de ***occur check*** y se asegura de realizar de manera correcta las sustituciones e instanciamientos de variables.
 
 Dado cualquier conjunto finito, no vacío, de expresiones el algoritmo de unificación siempre termina. Si no fuera así se generaría una secuencia infinita $\mathbb{L}\theta_1, \mathbb{L}\theta_2, \cdots, \mathbb{L}\theta_n, \cdots$ donde cada $\mathbb{L}\theta_i$ es un conjunto de expresiones.
-Obsérvese que $\mathbb{L}\theta_{i+1}$ se obtiene a partir de $\mathbb{L}\theta_i$ y además $\mathbb{L}\theta_{i+1}$ contiene una variable menos que $\mathbb{L}\theta_i$. Como las expresiones originales contenidas en $\mathbb{L}$ solo incluyen números finitos de variables no es posible prologar la secuencia indefinidamente.
-
+Obsérvese que $\mathbb{L}\theta_{i+1}$ se obtiene a partir de $\mathbb{L}\theta_i$ y además $\mathbb{L}\theta_{i+1}$ contiene una variable menos que $\mathbb{L}\theta_i$. Como las expresiones originales contenidas en $\mathbb{L}$ solo incluyen números finitos de variables no es posible prolongar la secuencia indefinidamente.
 >[!tldr] Teorema
 >Sea $\mathbb{L}$ un conjunto finito, no vacío, de expresiones. Si $\mathbb{L}$ es unificable entonces el algoritmo unificador siempre termina y el unificador encontrado es un unificador más general de $\mathbb{L}$.
-
