--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/1. Calculo Proposicional.md
@@ -1,27 +1,22 @@
 
-Al analizar la estructura de los ***argumentos*** se reconoció la existencia de ciertas unidades atómicas que los forman. Estos átomos además se combinan para integrarse en bloques más complejos, a su vez estos bloques pueden utilizarse para conformar estructuras aún más complejas. Una observación de gran importancia surge al descubrir que la forma en que se combinan los átomos es de naturaleza algebraica, es decir, podemos expresar operaciones de forma abstracta mediante símbolos.
+Al analizar la estructura de los ***argumentos*** se reconoció la existencia de ciertas unidades atómicas que lo conforman. Estos átomos pueden combinarse para integrarse en bloques más complejos, a su vez estos bloques pueden utilizarse para conformar estructuras aún más complejas. Una observación de gran importancia surge al descubrir que la forma en que se combinan los átomos es de naturaleza algebraica, es decir, podemos expresar operaciones de forma abstracta mediante símbolos.
 En lógica, estas unidades básicas o entidades se denominan sentencias. En correspondencia con la observación de que la estructura puede ser elemental o compleja aparecen las ***sentencias atómicas*** y ***sentencias compuestas***. Existen sentencias de las cuales es posible decidir su veracidad o su falsedad, este tipo de sentencias reciben el nombre de ***proposiciones***. Aunque también existen sentencias las cuales no es posible considerar si son falsas o verdaderas.
-
 >[!tldr] Inconsistencia de las Proposiciones
 >Dado un conjunto de proposiciones, se dice que el conjunto es ***consistente*** si todas las proposiciones son verdaderas, de caso contrario el conjunto se dice ***inconsistente***.
 
-Existen proposiciones que son siempre verdaderas, otras que son siempre falsas y otras cuya verdad depende del contexto. Aquellas proposiciones que son siempre verdaderas se dicen que son ***lógicamente verdaderas*** o ***tautológicas***, mientras que aquellas proposiciones que son siempre falsas son llamadas ***lógicamente falsas*** o ***contradicciones***. Existe un caso particular de proposiciones en las cuales su **falsedad** o veracidad va a depender del contexto en el que sean evaluados, este tipo de proposiciones se denominan ***contingencias***.
-
+Existen proposiciones que son siempre verdaderas, otras que son siempre falsas y otras cuya verdad depende del contexto. Aquellas proposiciones que son siempre verdaderas se dicen que son ***lógicamente verdaderas*** o ***tautológicas***, mientras que aquellas proposiciones que son siempre falsas son llamadas ***lógicamente falsas*** o ***contradicciones***.
+Existe un caso particular de proposiciones en las cuales su falsedad o veracidad va a depender del contexto en el que sean evaluados, este tipo de proposiciones se denominan ***contingencias***.
 ## Lenguaje de la Lógica Proposicional
-
->[!note] Sobre este Lenguaje
->Con fin de introducirnos más en profundidad en los conceptos de la lógica proposicional, se utiliza el siguiente lenguaje para explicar tanto propiedades como reglas de este tipo de lógica.
-
+Con fin de introducirnos más en profundidad en los conceptos de la lógica proposicional, se utiliza el siguiente lenguaje para explicar tanto propiedades como reglas de este tipo de lógica.
 - **Alfabeto**:
 	- Letras proposicionales $(A-Z)$ y estas mismas letras con subíndices enteros positivos $(A_i - Z_i)$.
 	- Conectivos lógicos $\{ \rightarrow, ¬ \}$.
 	- Símbolos Auxiliares $\{ ( , ) \}$.
 - **Fórmulas Bien Formadas**:
 	- Todas las letras proposicionales.
-	- Si $P$ y $Q$ son FBF, entonces $(¬P)$, $(P \rightarrow Q)$ también son fórmulas bien formadas (fórmulas compuestas).
+	- Si $P$ y $Q$ son fórmulas bien formadas, entonces $(¬P)$, $(P \rightarrow Q)$ también son fórmulas bien formadas (fórmulas compuestas).
 
-Si bien el alfabeto original permite construir todas las operaciones lógicas a partir de únicamente a partir de los símbolos y fórmulas expuestas con anterioridad, con fin facilitar la escritura de fórmulas y evitar una complejidad innecesaria, se aceptan las siguientes reglas de reescritura:
-
+Si bien el alfabeto original permite construir todas las operaciones lógicas utilizando únicamente los conectivos lógicos anteriormente nombados se puede apicar ciertas reglas de reescritura con fin facilitar la escritura de fórmulas y evitar una complejidad innecesaria, se aceptan las siguientes reglas de reescritura:
 - $(P \wedge Q)$ se escribe como $(¬(P \rightarrow (¬Q)))$.
 - $(P \vee Q)$ se escribe como $((¬P) \rightarrow Q)$.
 - $(P \equiv Q)$ se escribe como $((P \rightarrow Q) \wedge (Q \rightarrow P))$.
@@ -35,29 +30,23 @@ Si bien el alfabeto original permite construir todas las operaciones lógicas a 
 >4. $\rightarrow$.
 >5. $\equiv$.
 
-En la lógica proposicional clásica hay solo dos valores de verdad: Verdadero (T) y Falso (F). Una interpretación bajo este sistema consiste de asignar un valor de verdad a cada letra proposicional y luego evaluar las proposiciones compuestas. Para obtener un valor de verdad de una fórmula bien formada arbitraria se necesita dar significado a los conectivos y basándonos en eso construir tablas de verdad. Para simplificar el lenguaje diremos que una fórmula bien formada es verdadera si toma el valor de verdad $V$ y diremos que es falsa si toma el valor $F$. Por ejemplo veamos la siguiente imagen.
-
+En la lógica proposicional clásica hay solo dos valores de verdad, Verdadero (T) y Falso (F). Una interpretación bajo este sistema consiste de asignar un valor de verdad a cada letra proposicional y luego evaluar las proposiciones compuestas. Para obtener un valor de verdad de una fórmula bien formada arbitraria se necesita dar significado a los conectivos y basándonos en eso construir tablas de verdad.
+Para simplificar el lenguaje diremos que una fórmula bien formada es verdadera si toma el valor de verdad $V$ y diremos que es falsa si toma el valor de verdad $F$. Por ejemplo veamos la siguiente imagen.
 ![[tabla-verdad-ejemplo.png]]
 
 Para este caso no podemos decir que esta fórmula bien formada es verdadera ni falsa, ya que su valor depende del contexto, es decir, estamos ante la presencia de una contingencia.
-Podemos tomar a cada línea de la tabla de verdad como la representación de una clase de interpretación de esta fórmula. Una interpretación en la que una fórmula bien formada $P$ es verdadera se dice que es un modelo para esa fórmula bien formada. Si dado un conjunto $S$ de fórmulas bien formadas, una interpretación de este conjunto es un modelo del mismo si y solo si es un modelo para cada una de las fórmulas bien formadas que lo integran. Por ejemplo $A \equiv ¬(¬A)$, ya que coinciden en todas las interpretaciones posibles, es decir, poseen la misma tabla de verdad.
-
+Podemos tomar a cada línea de la tabla de verdad como la representación de una clase de interpretación de esta fórmula. Una interpretación en la que una fórmula bien formada $P$ es verdadera se dice que es un modelo para esa fórmula bien formada. Dado un conjunto $S$ de fórmulas bien formadas, una interpretación de este conjunto es un modelo del mismo si y solo si es un modelo para cada una de las fórmulas bien formadas que lo integran. Por ejemplo $A \equiv ¬(¬A)$, ya que coinciden en todas las interpretaciones posibles, es decir, poseen la misma tabla de verdad.
 ### Conectivos, Tautologías y Contradicciones
-
 Los conectivos proporcionales son funciones lógicas que tomas argumentos del conjunto $\{V, F\}$ y devuelven un resultado en $\{V, F\}$. En caso del lenguaje $\mathcal{L}$, solo $¬$ es unario mientras que el resto son operadores binarios, podría haber funciones de más argumentos, en la cual la tabla de verdad, para $N$ argumentos, requerirá $2^N$ líneas.
-
 >[!tldr] Conjunto Suficiente de Colectivos
 >Un conjunto de conectivos $S$ será un conjunto suficiente de conectivos, si toda función lógica puede ser expresado en términos de los conectivos del conjunto $S$.
 >1. **Teorema**: $\{¬, \wedge, \vee\}$ es un conjunto suficiente de conectivos.
 >2. **Teorema**: $\{ \rightarrow, ¬\}$ es un conjunto suficiente de conectivos. ^conjunto-suficiente-conectivos
 
 Una fórmula bien formada es ***satisfacible*** si es verdadera bajo alguna interpretación. Si dicha fórmula bien formada es siempre verdadera bajo todas sus posibles interpretaciones, dicha fórmula es ***lógicamente válida*** o tautológica. Por otro lado, una fórmula bien formada es ***insatisfacible*** o una contradicción si es falsa bajo todas sus interpretaciones posibles, este tipo de fórmulas se denota con el símbolo $\perp$.
-Para verificar si una sentencia lógicamente válida es ***decidible***, solo hay que ver si en la tabla de verdad da $V$ para todas sus combinaciones. Una forma de hacerlo es construir la tabla de verdad y corroborar que se cumpla la condición, aunque existen formas más económicas para decidir si una fórmula bien formada es una tautología o no, el proceso empieza por intentar hacer falsa a la fórmula bien formada. Para ello se observa cuál es el conectivo principal y a partir de él se ve como es posible, de acuerdo a la tabla de verdad del conectivo, como asignar valores de verdad que la hagan falsa.
-
+Para verificar si una sentencia lógicamente válida es ***decidible***, solo hay que ver si su tabla de verdad da $V$ para todas sus combinaciones o interpretaciones. Una forma de hacerlo es construir la tabla de verdad y corroborar que se cumpla la condición, aunque existen formas más económicas para decidir si una fórmula bien formada es una tautología o no, el proceso empieza por intentar hacer falsa a la fórmula bien formada. Para ello se observa cuál es el conectivo principal y a partir de él se ve como es posible, de acuerdo a la tabla de verdad del conectivo, como asignar valores de verdad que la hagan falsa.
 ### Deducción en la Lógica Proposicional
-
-La deducción en la lógica proposicional es un poco diferente al presentado en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tollens***.
-
+La deducción en la lógica proposicional es un poco diferente a la presentada en la unidad anterior aunque parte de la misma base, para comenzar se propone una serie de esquemas de axiomas que garantiza la tautología de cualquier fórmula bien formada y una regla de inferencia que puede ser mediante ***modus ponens*** o ***modus tollens***.
 - **Esquema de Axiomas**:
 	- $A$, $B$ y $C$ son metavariables que representan fórmulas bien formadas en $L$.
 		1. $L_1: (A \rightarrow (B \rightarrow A))$.
@@ -67,29 +56,20 @@ La deducción en la lógica proposicional es un poco diferente al presentado en 
 	- La relación $(A, A \rightarrow B, B)$.
 	- $B$ es una consecuencia directa de $A$ y $A \rightarrow B$, o bien $A, A \rightarrow B \vdash B$.
 
-Si bien el procedimiento para probar si una hipótesis es deducible o no es el mismo que el explicado anteriormente es conveniente mostrar un ejemplo. Supongamos que queremos probar que de la hipótesis $Q$ se prueba $(P \rightarrow Q)$, es decir $Q \vdash (P \rightarrow Q)$. Para la demostración partiremos del esquema del axioma $L_1$ y de nuestra hipótesis, quedándonos lo siguiente:
-
+Si bien el procedimiento para probar si una hipótesis es deducible o no es el mismo que el explicado anteriormente es conveniente mostrar un ejemplo. Supongamos que queremos probar que de la hipótesis $Q$ se prueba $(P \rightarrow Q)$, es decir $Q \vdash (P \rightarrow Q)$. Para la demostración partiremos del esquema del primer axioma ($L_1$) y de nuestra hipótesis, quedándonos lo siguiente:
 1. $Q \vdash (Q \rightarrow (P \rightarrow Q))$
 2. $Q \vdash Q$
 3. $Q \vdash (P \rightarrow Q)$
 
 El tercer paso se obtiene aplicar la regla de inferencia modus ponens del axioma y nuestra hipótesis del punto 2.
-
 >[!tldr] Meta-Teorema de la Deducción
->Sea $S$ un conjunto de fórmulas bien formadas e $A$ y $B$ dos fórmulas bien formadas, si $S, A \vdash B$ entonces se cumple que $S \vdash A \rightarrow B$.
-
+>Sea $S$ un conjunto de fórmulas bien formadas donde $A$ y $B$ son fórmulas bien formadas, si $S, A \vdash B$ entonces se cumple que $S \vdash A \rightarrow B$.
 ### Teoremas en la Lógica Proposicional
-
-Al igual que en la primera unidad, se puede probar que un esquema es un teorema en $L$, si puede ser alcanzada por los axiomas y las reglas de inferencia, en sí el procedimiento es idéntico al de deducción con la particularidad de que solo se utilizan axiomas en la prueba. Se puede extender la idea de prueba usando teoremas probados previamente como una abreviatura de su propia deducción.
-
->[!tldr] Teoremas Probados
->Ya existen un conjunto de teoremas que han sido probados previamente, los cuales pueden ser reutilizados cuando se realizan las demostraciones, estos teoremas son los siguientes:
->
->- $\vdash A$ para cualquier axioma $A$.
->- $A \rightarrow A$ por meta-teorema de la deducción.
->- $(A \rightarrow B) \rightarrow ((B \rightarrow C) \rightarrow (A \rightarrow C))$ por meta-teorema de la deducción.
->- $(¬B \rightarrow ¬A) \rightarrow (A \rightarrow B)$ por meta-teorema de la deducción.
->- $(B \rightarrow ¬A) \rightarrow (A \rightarrow ¬B)$.
->- $¬¬A \rightarrow A$.
-
-
+Al igual que en la primera unidad, se puede probar que un esquema es un teorema en $\mathcal{L}$, si puede ser alcanzada utilizando solo axiomas y reglas de inferencia. El procedimiento es idéntico al de deducción ya previamente mostrado con la particularidad de que solo se utilizan axiomas en la prueba. Se puede extender la idea de prueba usando teoremas probados previamente como una abreviatura de su propia deducción.
+Existen un conjunto de teoremas que ya han sido probados y demostrados, los cuales pueden ser reutilizados cuando se realizan las demostraciones, estos teoremas son los siguientes:
+- $\vdash A$ para cualquier axioma $A$.
+- $A \rightarrow A$ por meta-teorema de la deducción.
+- $(A \rightarrow B) \rightarrow ((B \rightarrow C) \rightarrow (A \rightarrow C))$ por meta-teorema de la deducción.
+- $(¬B \rightarrow ¬A) \rightarrow (A \rightarrow B)$ por meta-teorema de la deducción.
+- $(B \rightarrow ¬A) \rightarrow (A \rightarrow ¬B)$.
+- $¬¬A \rightarrow A$.
